--- a/ledger/templates/read.html
+++ b/ledger/templates/read.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #00ff00;">
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #c0c0c0;">
         <div class="container">
-         <h2>L-cafe ledger program</h2>
+         <h2>L-cafe 장부</h2>
         </div>
     </nav>
     <div class="container">
