--- a/ledger/templates/read_single_ledger.html
+++ b/ledger/templates/read_single_ledger.html
@@ -4,23 +4,37 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap-theme.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 
 </head>
 
 <body>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #c0c0c0;">
+        <div class="container">
+            <h2>L-cafe 장부</h2>
+        </div>
+    </nav>
 
     <div class="container">
-        <h2>L-cafe ledger program</h2>
-        <div class="crud">
+        <h2>확인자: {{ id.personInCharge }}</h2>
 
-        
+        {% for p in order_list %}
+        {% if p.identification == id.identification %}
+
+        <div class="card" style="width: 18rem;">
+            <div class="card-body">
+                <h2>주문 번호: {{ p.number }}</h2>
+                <h2>주문자: {{ p.orderer }}</h2>
+                <h2>품목: {{ p.item }}</h2>
+                <h2>개수: {{ p.count }}</h2>
+            </div>
         </div>
-
+        {% endif %}
+        {% endfor %}
     </div>
 
 
