중간 업데이트

--- a/ledger/templates/index.html
+++ b/ledger/templates/index.html
@@ -20,6 +20,7 @@
         <div class="crud">
 
             <a href="/edit_ledger/read">장부 조회</a>
+            <a href="/edit_ledger/update">장부 수정</a>
             <button type="button" class="btn btn-primary" href="create.html">장부 생성</button>
             <button type="button" class="btn btn-success" onclick="location.href='read.html'">장부 조회</button>
             <button type="button" class="btn btn-danger" href="update.html">장부 수정</button>
