--- a/ledger/templates/update.html
+++ b/ledger/templates/update.html
@@ -1,9 +1,40 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="ko">
-    <head>
 
-    </head>
-    <body>
-        
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #c0c0c0;">
+        <div class="container">
+         <h2>L-cafe 장부</h2>
+        </div>
+    </nav>
+    <div class="container">
+        <h2>장부 수정</h2>
+        <div class="ledger_list">
+            {% for p in ledger %}
+
+
+            <a href="{{ p.get_absolute_url_update }}">
+                <div class="card">
+                    <div class="card-body">
+                        {{ p.identification }}
+                    </div>
+                </div>
+            </a>
+
+
+            {% endfor %}
+        </div>
+
+    </div>
+
+
+</body>
+
 </html>
