--- a/ledger/templates/ledger/ledgers.html
+++ b/ledger/templates/ledger/ledgers.html
@@ -6,7 +6,6 @@
     <meta charset="UTF-8">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-
 </head>
 
 <body>
@@ -15,17 +14,22 @@
          <h2>L-cafe 장부</h2>
         </div>
     </nav>
-
     <div class="container">
-        <div class="crud">
+        <h2 class="mt-2">장부 수정</h2>
+        <div class="ledger_list">
+            {% for p in ledger %}
 
-            <a href="/edit_ledger/read">장부 조회</a>
-            <a href="/edit_ledger/update">장부 수정</a>
-            <button type="button" class="btn btn-primary" href="create.html">장부 생성</button>
-            <button type="button" class="btn btn-success" onclick="location.href='read.html'">장부 조회</button>
-            <button type="button" class="btn btn-danger" href="update.html">장부 수정</button>
-            <button type="button" class="btn btn-warning" href="update_item.html">품목 수정</button>
-        
+            <div class="my-2">
+                <button type="button" class="btn btn-outline-secondary" onclick="location.href='{{ p.get_absolute_url_update }}'">
+
+                    <h4>{{ p.identification }}</h3>
+
+                </button>
+            </div>
+
+
+            {% endfor %}
+            
         </div>
 
     </div>
