--- a/ledger/templates/ledger/index.html
+++ b/ledger/templates/ledger/index.html
@@ -19,8 +19,8 @@
     <div class="container">
         <div class="crud mt-5">
 
-            <button type="button" class="btn btn-outline-secondary" onclick="location.href='/l_cafe_ledger/ledgers'">장부 수정 & 업데이트</button>
-            <button type="button" class="btn btn-outline-secondary" onclick="location.href='/l_cafe_ledger/create'">품목 업데이트</button>
+            <button type="button" class="btn btn-outline-secondary" onclick="location.href='/l_cafe_ledger/ledgers'">장부</button>
+            <button type="button" class="btn btn-outline-secondary" onclick="location.href='/l_cafe_ledger/item'">판매 품목</button>
 
 
             <!-- <button type="button" class="btn btn-primary" href="create.html">장부 생성</button>
