--- a/ledger/templates/ledger/ledgers.html
+++ b/ledger/templates/ledger/ledgers.html
@@ -4,32 +4,50 @@
 
 <head>
     <meta charset="UTF-8">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #c0c0c0;">
         <div class="container">
-         <h2>L-cafe 장부</h2>
+            <h2>L-cafe 장부</h2>
         </div>
     </nav>
     <div class="container">
-        <h2 class="mt-2">장부 수정</h2>
-        <div class="ledger_list">
-            {% for p in ledger %}
+        <div class="row">
+            <div class="col-9">
+                <h2 class="mt-2">장부 수정</h2>
+                <div class="ledger_list">
+                    {% for p in ledger %}
 
-            <div class="my-2">
-                <button type="button" class="btn btn-outline-secondary" onclick="location.href='{{ p.get_absolute_url_update }}'">
+                    <button type="button" style="width: 300px;" class="btn btn-outline-secondary mb-2"
+                        onclick="location.href='{{ p.get_absolute_url_update }}'">
+ 
+                        <h4>{{ p.identification }}</h3>
 
-                    <h4>{{ p.identification }}</h3>
+                    </button>
 
-                </button>
+
+                    {% endfor %}
+                </div>
+
             </div>
+            <!-- <div class="col-3 mt-2">
+                <div class="card" style="width: 150px;">
+                    <div class="card-header">
+                        도구
+                    </div>
+                    <div class="card-body">
+                        submit로?
 
-
-            {% endfor %}
-            
+                        <button type="button" style="width: 106px; height: 40px;" class="btn btn-outline-success mb-2" onclick="location.href='{{ p.get_absolute_url }}'">장부 추가</button>
+                    </div>
+                </div>
+            </div> -->
         </div>
 
     </div>
