--- a/ledger/templates/ledger/single_ledger_update.html
+++ b/ledger/templates/ledger/single_ledger_update.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+
 </head>
 
 <body>
@@ -33,42 +34,61 @@
                     품목
                 </div>
                 <div class="col-3 bg-secondary">
-                    갯수
+                    개수
                 </div>
             </div>
+
+
+            {% for p in order_list %}
+            {% if p.identification == id.identification %}
+
             <form method="POST" class="post-form" action="{% url 'single_ledger' pk %}">
                 {% csrf_token %}
 
-                {% for p in order_list %}
-                {% if p.identification == id.identification %}
 
-                <ul class="list-group list-group-horizontal my-1 row">
+                <ul class="list-group list-group-horizontal my-2 row">
                     <li class="list-group-item col-3">
-                        <input type="number" name="{{ p.number }}" id="order_num" style="border:none; width:250px;" value="{{ p.number }}">
+                        {{ p.number }}
                     </li>
                     <li class="list-group-item col-3">
-                        <input type="text" name="orderer" id="orderer" style="border:none; width:250px;" value="{{ p.orderer }}">
+                        <input type="text" name="orderer" id="orderer" style="border:none; width:200px;"
+                            value="{{ p.orderer }}">
                     </li>
 
                     <!-- item select로 만들기 -->
 
                     <li class="list-group-item col-3">
-                        <input type="text" name="order_item" id="order_item" style="border:none; width:250px;" value="{{ p.item }}">
+                        <input type="text" name="order_item" id="order_item" style="border:none; width:200px;"
+                            value="{{ p.item }}">
                     </li>
 
                     <li class="list-group-item col-3">
-                        <input type="number" name="order_count" id="order_count" style="border:none; width:250px;" value="{{ p.count }}">
+                        <input type="number" name="order_count" id="order_count" style="border:none; width:200px;"
+                            value="{{ p.count }}">
                     </li>
                 </ul>
+                <button type="submit" class="btn btn-outline-primary" style="margin-left: 1050px;">수정</button>
 
-                {% endif %}
-                {% endfor %}
-
-                <button type="submit" class="btn btn-outline-primary" style="margin-left: 1050px; margin-top:40px;">완료</button>
-                
             </form>
+
+            {% endif %}
+            {% endfor %}
+
         </div>
-        <div class="col-3"></div>
+        <div class="col-1">
+            <div class="card my-3">
+                <div class="card-header">
+                    도구
+                </div>
+                <div class="card-body">
+                    <!-- 미완; 버튼 클릭시 URL 수정. -->
+                    <button type="button" style="width: 106px; height: 40px;" class="btn btn-outline-success mb-2"
+                        onclick="location.href='./'">완료</button>
+
+                </div>
+            </div>
+        </div>
+        <div class="col-2"></div>
 
 </body>
 
